# ethicist-mcp

./: AGENTS.md  CONFIGURATION.md  EXAMPLES.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  demo.py  pyproject.toml  requirements.txt  test_mcp_protocol.py  test_server.py
ethicist_mcp/: __init__.py  http_server.py  server.py
